# LazyLS

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  start.sh
inc/: constants.h  file.h  global.h  input.h  objects.h  pch.h  util.h
src/: file.cpp  input.cpp  main.cpp  objects.cpp  util.cpp
tests/: objects_tests.cpp
